<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="cursive"
        android:text="@string/SignInPageTitle"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaillayout"
        style=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signintext"
        android:layout_marginTop="120dp"
        android:hint="@string/EmailForm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordlayout"
        style=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emaillayout"
        android:layout_marginTop="20dp"
        android:hint="@string/PasswordForm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordlayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:paddingBottom="10dp"
        android:text="@string/SignInLink" />


    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:text="@string/btnRegistername"
        android:textAlignment="center"
        android:textColor="@color/purple_500" />


</RelativeLayout>